--- a/index.html
+++ b/index.html
@@ -9974,6 +9974,12 @@ var _user$project$Game_Model$Table = F4(
 	function (a, b, c, d) {
 		return {pos1: a, pos2: b, pos3: c, pos4: d};
 	});
+var _user$project$Game_Model$GameInfo = function (a) {
+	return {ctor: 'GameInfo', _0: a};
+};
+var _user$project$Game_Model$Players = function (a) {
+	return {ctor: 'Players', _0: a};
+};
 var _user$project$Models$Model = F5(
 	function (a, b, c, d, e) {
 		return {mode: a, game: b, windowSize: c, player: d, gameId: e};
@@ -10005,6 +10011,9 @@ var _user$project$Models$initialModel = {
 };
 var _user$project$Msgs$SizeUpdated = function (a) {
 	return {ctor: 'SizeUpdated', _0: a};
+};
+var _user$project$Msgs$LobbyUpdate = function (a) {
+	return {ctor: 'LobbyUpdate', _0: a};
 };
 var _user$project$Msgs$GameIdUpdate = function (a) {
 	return {ctor: 'GameIdUpdate', _0: a};
@@ -10039,7 +10048,7 @@ var _user$project$Globals$serverUrl = 'ws://localhost:5000';
 var _user$project$Encoders$encodeObject = function (object) {
 	return A2(_elm_lang$core$Json_Encode$encode, 4, object);
 };
-var _user$project$Encoders$encodeGame = F2(
+var _user$project$Encoders$encodePlay = F2(
 	function (gameId, player) {
 		return _user$project$Encoders$encodeObject(
 			_elm_lang$core$Json_Encode$object(
@@ -10131,17 +10140,22 @@ var _user$project$Encoders$encodeLobby = function (player) {
 					_0: {
 						ctor: '_Tuple2',
 						_0: 'player',
-						_1: _elm_lang$core$Json_Encode$string('player')
+						_1: _elm_lang$core$Json_Encode$string(player)
 					},
 					_1: {ctor: '[]'}
 				}
 			}));
 };
-var _user$project$Commands$fetchLobby = function (player) {
-	return A2(
-		_elm_lang$websocket$WebSocket$send,
-		_user$project$Globals$serverUrl,
-		_user$project$Encoders$encodeLobby(player));
+var _user$project$Commands$fetchLobby = function (players) {
+	var _p0 = _elm_lang$core$List$head(players);
+	if (_p0.ctor === 'Nothing') {
+		return _elm_lang$core$Platform_Cmd$none;
+	} else {
+		return A2(
+			_elm_lang$websocket$WebSocket$send,
+			_user$project$Globals$serverUrl,
+			_user$project$Encoders$encodeLobby(_p0._0));
+	}
 };
 var _user$project$Commands$fetchWatch = F3(
 	function (gameId, player, gameCoord) {
@@ -10150,12 +10164,12 @@ var _user$project$Commands$fetchWatch = F3(
 			_user$project$Globals$serverUrl,
 			A3(_user$project$Encoders$encodeWatch, gameId, player, gameCoord));
 	});
-var _user$project$Commands$fetchGame = F2(
+var _user$project$Commands$fetchPlay = F2(
 	function (gameId, player) {
 		return A2(
 			_elm_lang$websocket$WebSocket$send,
 			_user$project$Globals$serverUrl,
-			A2(_user$project$Encoders$encodeGame, gameId, player));
+			A2(_user$project$Encoders$encodePlay, gameId, player));
 	});
 var _user$project$Commands$getWindowSize = A2(_elm_lang$core$Task$perform, _user$project$Msgs$SizeUpdated, _elm_lang$window$Window$size);
 var _user$project$Decoders$cardDecoder = A3(
@@ -10239,6 +10253,21 @@ var _user$project$Decoders$gameDecoder = A3(
 									'gameType',
 									_elm_lang$core$Json_Decode$string,
 									_NoRedInk$elm_decode_pipeline$Json_Decode_Pipeline$decode(_user$project$Game_Model$Game))))))))));
+var _user$project$Decoders$playersDecoder = A2(
+	_elm_lang$core$Json_Decode$map,
+	_user$project$Game_Model$Players,
+	_elm_lang$core$Json_Decode$list(_user$project$Decoders$playerDecoder));
+var _user$project$Decoders$gameIdDecoder = A2(_elm_lang$core$Json_Decode$map, _user$project$Game_Model$GameInfo, _elm_lang$core$Json_Decode$string);
+var _user$project$Decoders$lobbyDecoder = _elm_lang$core$Json_Decode$oneOf(
+	{
+		ctor: '::',
+		_0: _user$project$Decoders$playersDecoder,
+		_1: {
+			ctor: '::',
+			_0: _user$project$Decoders$gameIdDecoder,
+			_1: {ctor: '[]'}
+		}
+	});
 var _user$project$Game_Translate$isEqual = F2(
 	function (a, b) {
 		return _elm_lang$core$Native_Utils.eq(
@@ -10954,13 +10983,24 @@ var _user$project$Game_Play_Game$init = A2(
 			}),
 		_1: {ctor: '[]'}
 	});
+var _user$project$Game_Update$decodeLobby = function (lobbyString) {
+	return A2(_elm_lang$core$Json_Decode$decodeString, _user$project$Decoders$lobbyDecoder, lobbyString);
+};
+var _user$project$Game_Update$updateLobby = function (lobbyString) {
+	var _p0 = _user$project$Game_Update$decodeLobby(lobbyString);
+	if (_p0.ctor === 'Ok') {
+		return _elm_lang$core$Maybe$Just(_p0._0);
+	} else {
+		return _elm_lang$core$Maybe$Nothing;
+	}
+};
 var _user$project$Game_Update$decodeGame = function (gameString) {
 	return A2(_elm_lang$core$Json_Decode$decodeString, _user$project$Decoders$gameDecoder, gameString);
 };
 var _user$project$Game_Update$updateGame = function (gameString) {
-	var _p0 = _user$project$Game_Update$decodeGame(gameString);
-	if (_p0.ctor === 'Ok') {
-		return _elm_lang$core$Maybe$Just(_p0._0);
+	var _p1 = _user$project$Game_Update$decodeGame(gameString);
+	if (_p1.ctor === 'Ok') {
+		return _elm_lang$core$Maybe$Just(_p1._0);
 	} else {
 		return _elm_lang$core$Maybe$Nothing;
 	}
@@ -11583,7 +11623,7 @@ var _user$project$Game_Watch_Game$init = A2(
 			}),
 		_1: {ctor: '[]'}
 	});
-var _user$project$Game_View$viewLobby = function (player) {
+var _user$project$Game_View$viewPlayer = function (player) {
 	return A2(
 		_elm_lang$html$Html$div,
 		{ctor: '[]'},
@@ -11592,6 +11632,12 @@ var _user$project$Game_View$viewLobby = function (player) {
 			_0: _elm_lang$html$Html$text(player),
 			_1: {ctor: '[]'}
 		});
+};
+var _user$project$Game_View$viewLobby = function (players) {
+	return A2(
+		_elm_lang$html$Html$div,
+		{ctor: '[]'},
+		A2(_elm_lang$core$List$map, _user$project$Game_View$viewPlayer, players));
 };
 var _user$project$Game_View$viewWatch = function (mGame) {
 	var _p0 = mGame;
@@ -11609,183 +11655,226 @@ var _user$project$Game_View$viewPlay = function (mGame) {
 		return _user$project$Game_Play_Game$viewGame(_p1._0);
 	}
 };
+var _user$project$Updates$fetchGame = F4(
+	function (model, mode, mGameCoord, mPlayer) {
+		var _p0 = mode;
+		switch (_p0.ctor) {
+			case 'Init':
+				return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
+			case 'Play':
+				return {
+					ctor: '_Tuple2',
+					_0: model,
+					_1: A2(_user$project$Commands$fetchPlay, _p0._0, _p0._1)
+				};
+			case 'Watch':
+				var _p6 = _p0._1;
+				var _p5 = _p0._0;
+				var _p1 = mGameCoord;
+				if (_p1.ctor === 'Nothing') {
+					var _p2 = mPlayer;
+					if (_p2.ctor === 'Nothing') {
+						return {
+							ctor: '_Tuple2',
+							_0: model,
+							_1: A3(
+								_user$project$Commands$fetchWatch,
+								_p5,
+								_p6,
+								{ctor: '_Tuple2', _0: 0, _1: 0})
+						};
+					} else {
+						return {
+							ctor: '_Tuple2',
+							_0: model,
+							_1: A3(
+								_user$project$Commands$fetchWatch,
+								_p5,
+								_p2._0,
+								{ctor: '_Tuple2', _0: 0, _1: 0})
+						};
+					}
+				} else {
+					var _p4 = _p1._0;
+					var _p3 = mPlayer;
+					if (_p3.ctor === 'Nothing') {
+						return {
+							ctor: '_Tuple2',
+							_0: model,
+							_1: A3(_user$project$Commands$fetchWatch, _p5, _p6, _p4)
+						};
+					} else {
+						return {
+							ctor: '_Tuple2',
+							_0: model,
+							_1: A3(_user$project$Commands$fetchWatch, _p5, _p3._0, _p4)
+						};
+					}
+				}
+			default:
+				return {
+					ctor: '_Tuple2',
+					_0: model,
+					_1: _user$project$Commands$fetchLobby(_p0._0)
+				};
+		}
+	});
 var _user$project$Updates$makeConstant = function (iPlayer) {
-	var _p0 = iPlayer;
-	if (_p0.ctor === 'Changing') {
-		return _user$project$Models$Constant(_p0._0);
+	var _p7 = iPlayer;
+	if (_p7.ctor === 'Changing') {
+		return _user$project$Models$Constant(_p7._0);
 	} else {
 		return iPlayer;
 	}
 };
-var _user$project$Updates$update = F2(
-	function (msg, model) {
-		var _p1 = msg;
-		switch (_p1.ctor) {
-			case 'OnLocationChange':
-				var _p2 = _p1._0;
-				switch (_p2.ctor) {
-					case 'Init':
-						return {
-							ctor: '_Tuple2',
-							_0: _elm_lang$core$Native_Utils.update(
-								model,
-								{mode: _user$project$Models$Init}),
-							_1: _elm_lang$core$Platform_Cmd$none
-						};
-					case 'Watch':
-						return {
-							ctor: '_Tuple2',
-							_0: _elm_lang$core$Native_Utils.update(
-								model,
-								{
-									mode: A2(_user$project$Models$Watch, _p2._0, _p2._1)
-								}),
-							_1: _elm_lang$core$Platform_Cmd$none
-						};
-					case 'Lobby':
-						return {
-							ctor: '_Tuple2',
-							_0: _elm_lang$core$Native_Utils.update(
-								model,
-								{
-									mode: _user$project$Models$Lobby(_p2._0)
-								}),
-							_1: _elm_lang$core$Platform_Cmd$none
-						};
-					default:
-						return {
-							ctor: '_Tuple2',
-							_0: _elm_lang$core$Native_Utils.update(
-								model,
-								{
-									mode: A2(_user$project$Models$Play, _p2._0, _p2._1)
-								}),
-							_1: _elm_lang$core$Platform_Cmd$none
-						};
-				}
-			case 'PlayerChange':
-				var _p3 = _p1._0;
-				if (_p3.ctor === 'Update') {
-					var _p4 = model.player;
-					if (_p4.ctor === 'Changing') {
-						return {
-							ctor: '_Tuple2',
-							_0: _elm_lang$core$Native_Utils.update(
-								model,
-								{
-									player: _user$project$Models$Changing(_p3._0)
-								}),
-							_1: _elm_lang$core$Platform_Cmd$none
-						};
-					} else {
-						return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
-					}
-				} else {
-					var pl = _user$project$Updates$makeConstant(model.player);
-					return {
-						ctor: '_Tuple2',
-						_0: _elm_lang$core$Native_Utils.update(
-							model,
-							{player: pl}),
-						_1: _elm_lang$core$Platform_Cmd$none
-					};
-				}
-			case 'GameUpdate':
-				var mNewGame = _user$project$Game_Update$updateGame(_p1._0);
-				var newPlayer = function () {
-					var _p5 = mNewGame;
-					if (_p5.ctor === 'Nothing') {
-						return model.player;
-					} else {
-						return _user$project$Models$Constant(_p5._0.activePlayer);
-					}
-				}();
-				return {
-					ctor: '_Tuple2',
-					_0: _elm_lang$core$Native_Utils.update(
-						model,
-						{game: mNewGame, player: newPlayer}),
-					_1: _elm_lang$core$Platform_Cmd$none
-				};
-			case 'FetchGame':
-				var _p13 = _p1._1;
-				var _p6 = model.mode;
-				switch (_p6.ctor) {
-					case 'Init':
-						return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
-					case 'Play':
-						return {
-							ctor: '_Tuple2',
-							_0: model,
-							_1: A2(_user$project$Commands$fetchGame, _p6._0, _p6._1)
-						};
-					case 'Watch':
-						var _p12 = _p6._1;
-						var _p11 = _p6._0;
-						var _p7 = _p1._0;
-						if (_p7.ctor === 'Nothing') {
-							var _p8 = _p13;
-							if (_p8.ctor === 'Nothing') {
-								return {
-									ctor: '_Tuple2',
-									_0: model,
-									_1: A3(
-										_user$project$Commands$fetchWatch,
-										_p11,
-										_p12,
-										{ctor: '_Tuple2', _0: 0, _1: 0})
-								};
-							} else {
-								return {
-									ctor: '_Tuple2',
-									_0: model,
-									_1: A3(
-										_user$project$Commands$fetchWatch,
-										_p11,
-										_p8._0,
-										{ctor: '_Tuple2', _0: 0, _1: 0})
-								};
-							}
-						} else {
-							var _p10 = _p7._0;
-							var _p9 = _p13;
-							if (_p9.ctor === 'Nothing') {
-								return {
-									ctor: '_Tuple2',
-									_0: model,
-									_1: A3(_user$project$Commands$fetchWatch, _p11, _p12, _p10)
-								};
-							} else {
-								return {
-									ctor: '_Tuple2',
-									_0: model,
-									_1: A3(_user$project$Commands$fetchWatch, _p11, _p9._0, _p10)
-								};
-							}
-						}
-					default:
-						return {
-							ctor: '_Tuple2',
-							_0: model,
-							_1: _user$project$Commands$fetchLobby(_p6._0)
-						};
-				}
-			case 'GameIdUpdate':
+var _user$project$Updates$playerChange = F2(
+	function (input, model) {
+		var _p8 = input;
+		if (_p8.ctor === 'Update') {
+			var _p9 = model.player;
+			if (_p9.ctor === 'Changing') {
 				return {
 					ctor: '_Tuple2',
 					_0: _elm_lang$core$Native_Utils.update(
 						model,
 						{
-							gameId: _elm_lang$core$Maybe$Just(_p1._0)
+							player: _user$project$Models$Changing(_p8._0)
 						}),
 					_1: _elm_lang$core$Platform_Cmd$none
+				};
+			} else {
+				return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
+			}
+		} else {
+			var pl = _user$project$Updates$makeConstant(model.player);
+			return {
+				ctor: '_Tuple2',
+				_0: _elm_lang$core$Native_Utils.update(
+					model,
+					{player: pl}),
+				_1: _elm_lang$core$Platform_Cmd$none
+			};
+		}
+	});
+var _user$project$Updates$onLocationChange = F2(
+	function (mode, model) {
+		var _p10 = mode;
+		switch (_p10.ctor) {
+			case 'Init':
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{mode: _user$project$Models$Init}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
+			case 'Watch':
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{
+							mode: A2(_user$project$Models$Watch, _p10._0, _p10._1)
+						}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
+			case 'Lobby':
+				var _p11 = _p10._0;
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{
+							mode: _user$project$Models$Lobby(_p11)
+						}),
+					_1: _user$project$Commands$fetchLobby(_p11)
 				};
 			default:
 				return {
 					ctor: '_Tuple2',
 					_0: _elm_lang$core$Native_Utils.update(
 						model,
-						{windowSize: _p1._0}),
+						{
+							mode: A2(_user$project$Models$Play, _p10._0, _p10._1)
+						}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
+		}
+	});
+var _user$project$Updates$update = F2(
+	function (msg, model) {
+		var _p12 = msg;
+		switch (_p12.ctor) {
+			case 'OnLocationChange':
+				return A2(_user$project$Updates$onLocationChange, _p12._0, model);
+			case 'PlayerChange':
+				return A2(_user$project$Updates$playerChange, _p12._0, model);
+			case 'GameUpdate':
+				var mNewGame = _user$project$Game_Update$updateGame(_p12._0);
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{game: mNewGame}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
+			case 'FetchGame':
+				return A4(_user$project$Updates$fetchGame, model, model.mode, _p12._0, _p12._1);
+			case 'GameIdUpdate':
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{
+							gameId: _elm_lang$core$Maybe$Just(_p12._0)
+						}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
+			case 'LobbyUpdate':
+				var player = function () {
+					var _p13 = model.player;
+					if (_p13.ctor === 'Changing') {
+						return _p13._0;
+					} else {
+						return _p13._0;
+					}
+				}();
+				var mLobby = _user$project$Game_Update$updateLobby(_p12._0);
+				var _p14 = mLobby;
+				if (_p14.ctor === 'Nothing') {
+					return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
+				} else {
+					var _p15 = _p14._0;
+					if (_p15.ctor === 'Players') {
+						return {
+							ctor: '_Tuple2',
+							_0: _elm_lang$core$Native_Utils.update(
+								model,
+								{
+									mode: _user$project$Models$Lobby(_p15._0)
+								}),
+							_1: _elm_lang$core$Platform_Cmd$none
+						};
+					} else {
+						var _p16 = _p15._0;
+						return {
+							ctor: '_Tuple2',
+							_0: _elm_lang$core$Native_Utils.update(
+								model,
+								{
+									mode: A2(_user$project$Models$Play, _p16, player),
+									gameId: _elm_lang$core$Maybe$Just(_p16)
+								}),
+							_1: _elm_lang$core$Platform_Cmd$none
+						};
+					}
+				}
+			default:
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{windowSize: _p12._0}),
 					_1: _elm_lang$core$Platform_Cmd$none
 				};
 		}
@@ -11844,7 +11933,12 @@ var _user$project$View$playBtn = F2(
 					ctor: '::',
 					_0: _elm_lang$html$Html_Events$onClick(
 						_user$project$Msgs$OnLocationChange(
-							_user$project$Models$Lobby(player))),
+							_user$project$Models$Lobby(
+								{
+									ctor: '::',
+									_0: player,
+									_1: {ctor: '[]'}
+								}))),
 					_1: {ctor: '[]'}
 				}
 			},
@@ -12048,8 +12142,8 @@ var _user$project$View$view = function (model) {
 										function (x, y) {
 											return A2(_elm_lang$core$Basics_ops['++'], x, y);
 										}),
-									'\n Player: ',
-									_elm_lang$core$Basics$toString(model.player))),
+									'\nmode: ',
+									_elm_lang$core$Basics$toString(model.mode))),
 							_1: {ctor: '[]'}
 						}
 					}
@@ -12065,7 +12159,7 @@ var _user$project$Subscriptions$webSocketSubscripiton = function (model) {
 		case 'Play':
 			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$GameUpdate);
 		case 'Lobby':
-			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$GameIdUpdate);
+			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$LobbyUpdate);
 		default:
 			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$GameUpdate);
 	}
